# linmod

./: .gitignore  CMakeLists.txt  DESCRIPTION  Makefile  NAMESPACE  NOTES.md  README  README.html  README.md  cleanup  configure  configure.ac  notes.txt
R/: glm_fit.r  glm_fit_test.r  glm_test.r  linmod-package.R  lm_fit.r  lm_fit_test.r  test.r  utils.r
benchmarks/: lmfit.r  lmfit_fullrank.r  logistic.r  run
inst/benchmarks/: lmfit_fullrank.r  logistic.r  poisson.r
man/: 00-package.Rd  glm_fit.Rd  linmod-package.Rd  lm_fit.Rd
src/: CMakeLists.txt  Makefile  Makevars  Makevars.in  glm.f90  glm_fit.c  glm_link_utils.f90  glm_loglik_utils.f90  glm_mu_var.f90  glm_utils.c  linmod.h  lm_fit.c  utils.c
src/glm/: CMakeLists.txt
src/glm/src/: glm.f90  glm_check.f90  glm_link_utils.f90  glm_loglik_utils.f90  glm_mu_var.f90  glm_residuals_utils.f90  glm_update_utils.f90  lapack.f90
src/glm/src/c_interface/: lm_fit.c
src/glm/src/lapack/: dgeadd.f90  dgels.f90  dgeqpf.f90  dormqr.f90  lapack.f90  lmfit.f90  lmfit_utils.f90  rdgels.f90
src/glm/src/lapack/orig/: dgeqpf.f  dormqr.f
src/glm/test/: dgeadd.f90  mk
src/linmod/: BUGS  CMakeLists.txt  TODO
src/linmod/cmake/Modules/: FindCheck.cmake  FindCobra.cmake
src/linmod/src/Rspecial/: Rspecial.c
src/linmod/src/c_interface/: glm_defines.h  lapack.h  linmod.h  lm_fit.c
src/linmod/src/distributions/: cauchy.c  constants.h  distributions.f90  normal.c
src/linmod/src/glm/: glm.f90  glm_check.f90  glm_constants.f90  glm_family_utils.f90  glm_fit.f90  glm_link_utils.f90  glm_loglik_utils.f90  glm_mu_var.f90  glm_update_utils.f90
src/linmod/src/lapack/: dgeadd.f90  dgeadd_omp.f90  dlacpy.f90  dlacpy_omp.f90  dlascl_omp.f90  lapack.f90  lapack_omp.f90
src/linmod/src/lm/: lm.f90  lm_fit.f90  lm_fit_utils.f90  lm_types.f90  lmfit.f90  qr_utils.f90  rdgels.f90  rdgels_utils.f90  rdgelsy.f90  rdgeqp3.f90  rdgeqpf.f90  rdlaqp2.f90  rdormqr.f90
src/linmod/src/utils/: Rspecial_.f90  custom_sort.f90  distributions.f90  distributions_probit.c  insertionsorts.f90  linmod_omp.f90  matrix_storage.c  qr_utils.f90  quicksort_utils.f90  quicksorts.f90  sort_by_index.f90  sorts.f90  string_tools.f90  swaps.f90  transpose.c  transposition.f90
src/linmod/src/utils/include/: README  insertionsort_by_index_generic.inc  insertionsort_generic.inc  quicksort_by_index_partition_generic.inc  quicksort_by_index_r_generic.inc  quicksort_median_of_3_generic.inc  quicksort_partition_generic.inc  quicksort_r_generic.inc  swap_generic.inc
src/linmod/test/: Makefile  distributions.f90  mk  simd.inc  transpose.c  transpose.f90
tests/: glm_fit.r  lm_fit.r  lm_fit_suite.r  lmfit.r  test_dist.r
